--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -19,8 +19,9 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
-
+  shared_preferences: ^0.5.3+4
   provider: ^3.0.0
+  uuid: 2.0.1
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
